# warmonitor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: index.py
templates/: index.html
tests/: test_fetcher.py  test_main.py  test_models.py
warmonitor/: __init__.py  app.tcss  cache.py  config.py  fetcher.py  main.py  models.py  sources.py
