[project]
name = "warmonitor"
version = "0.1.0"
description = "Live Iran-USA conflict monitor terminal dashboard"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.89.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "pydantic>=2.7.0",
]

[project.scripts]
warmonitor = "warmonitor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
