[project]
name = "warmonitor"
version = "0.2.0"
description = "Live Iran-USA conflict monitor terminal dashboard"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.89.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "pydantic>=2.7.0",
]

[project.scripts]
warmonitor = "warmonitor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
